Update GitHub Actions workflows to use publish profiles
- Switch from Azure service principal to publish profiles
- Remove Azure login step (not needed with publish profiles)
- Update to latest action versions (v3)
- Add all required environment variables for frontend build
- Properly package deployments as zip files

--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -35,11 +35,6 @@ jobs:
         VITE_API_SCOPES: 'api://8cd494f0-2240-4fb2-979c-d79b392a9ed8/access_as_user'
         VITE_API_URL: 'https://app-anthosks-api-se-01-p.azurewebsites.net'
 
-    - name: Azure Login
-      uses: azure/login@v2
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-
     - name: Create deployment package
       working-directory: ./frontend
       run: |
@@ -50,4 +45,5 @@ jobs:
       uses: azure/webapps-deploy@v3
       with:
         app-name: 'app-anthosks-ui-se-01-p'
+        publish-profile: ${{ secrets.AZURE_FRONTEND_PUBLISH_PROFILE }}
         package: ./frontend/deploy.zip
