--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -32,11 +32,6 @@ jobs:
         pip install pytest
         pytest tests/ || echo "No tests found"
 
-    - name: Azure Login
-      uses: azure/login@v2
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-
     - name: Create deployment package
       run: |
         zip -r deploy.zip . -x ".git/*" ".github/*" "*.pyc" "__pycache__/*" "tests/*" ".env" "venv/*" "*.md"
@@ -45,4 +40,5 @@ jobs:
       uses: azure/webapps-deploy@v3
       with:
         app-name: 'app-anthosks-api-se-01-p'
+        publish-profile: ${{ secrets.AZURE_BACKEND_PUBLISH_PROFILE }}
         package: ./deploy.zip
